--- a/main.html
+++ b/main.html
@@ -48,6 +48,7 @@
                 border-color:#ef476f #ef476f #ef476f #ef476f !important;
                 right: 50px!important;
                 border-width: 28.5px 0 28.5px 10vw!important;
+                display: ruby-text-container;
                 content: 'PAYMENT'!important;
                 color: azure;
         }
@@ -148,8 +149,8 @@
                 </div>
               </div>
               <div class="modal-footer mx-5 pt-3 mb-1" style="background-color: rgba(0, 0, 0, 0.733);">
-                <p class="font-small white-text d-flex justify-content-end">Haven't donated yet : <a href="#smiles" class="blue-text ml-1" data-dismiss="modal" >
-                    Donate Now</a></p>
+                <p class="font-small white-text d-flex justify-content-end">Haven't donated yet : <a class="blue-text ml-1" href="#smiles/1" >
+                   Donate Now </a></p>
               </div>
             </div>
           </div>
@@ -227,8 +228,8 @@
                     </b>
                   </p>
                 </div>
-                <div class="col-12 col-md-6">
-                  <img class="img-fluid" src="/images/smiles1-removebg-preview.png">
+                <div class="col-12 col-md-6 ">
+                  <img class="img-fluid mb-auto ml-auto" src="/images/smiles1-removebg-preview.png">
                 </div>
                 </div>
               </div>
