--- a/main.html
+++ b/main.html
@@ -66,7 +66,7 @@
           </ul>
           <div class="navbar-nav ml-auto">
             <span class="btn-info btn btn-block btn-rounded fd-btn"  data-toggle="modal" data-target="#elegantModalForm" style="background: #f11045;">
-              Send Us Your Feedback
+              Connect With Us
             </span>
           </div>
         </div>
@@ -525,6 +525,7 @@
           navigationTooltips:['Home','About Us','Smiles','Gallery','Contact Us']
       }) ;
     </script>
+
 
 
 </body>
