--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <div class="modal-dialog " role="document">
             <div class="modal-content form-elegant" style="background: url(./images/masthead.jpg);background-blend-mode: screen;">
               <div class="modal-header text-center">
-                <h3 class="modal-title mt-auto mb-auto dark-text ml-auto mr-auto" id="myModalLabel"><strong>Send Us Your Feedback</strong></h3>
+                <h3 class="modal-title mt-auto mb-auto dark-text ml-auto mr-auto" id="myModalLabel"><strong>Connect With Us</strong></h3>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close" style="width: auto;">
                   <span aria-hidden="true">&times;</span>
                 </button>
@@ -102,7 +102,7 @@
                     <label data-error="wrong" data-success="right" for="Form-pass1"> &nbsp; Your Feedback or Message</label>
                   </div>
                   <div class="text-center mb-3">
-                    <button type="submit" class="btn blue-gradient btn-block btn-rounded mr-auto ml-auto">Send my Feedback</button>
+                    <button type="submit" class="btn blue-gradient btn-block btn-rounded mr-auto ml-auto">Connect Now</button>
                   </div>
                 </form>
                 <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {}"></iframe>
@@ -143,7 +143,7 @@
                       </div>
                     </div>
                     <div class="row d-block d-md-none align-self-center">
-                      <div class="col-6 offset-3 zoom">
+                      <div class="col-4 offset-4 zoom">
                         <img class="img-fluid" src="./images/Fingerprint.png" height="150px">
                       </div>
                         <div class="col-12 zoom impcor" >
@@ -187,7 +187,7 @@
                 <div class="col-12 col-md-6">
                   <div class="row">
                 <div class="col-12"> 
-                  <h1 class="abouttitle">Our Initiative</h1>
+                  <h1 class="abouttitle">Volunteer Program</h1>
                 </div>
                 <div class="col-12">
                   <p>
@@ -220,13 +220,16 @@
               
               <div class="slide instructions">
                 <div class="row">
+                  <div class="col-12 text-right">
+                    <button type="button" class="fp-controlArrow fp-prev btn" style="background-color: #10cff1; ">Back</button>
+                  </div>
                   <div class="col-12">
                     <h2>PLEASE READ THE FOLLOWING INFORMATIONS CAREFULLY!</h2>
                     <ol>
                       <li> After reading these instructions please click on the 'Pay Now' button below.</li>
                       <li> In the new window please fill in the details regarding your email, phone number and enter the amount being donated. After that click the pay button.</li>
-                      <li> Then you can select a mode of payment and do the payment online. </li>
-                      <li> You will be awarded with a certificate of appreciation from imprints via email for your kind donation.</li>                     
+                      <li> You will be awarded with a certificate of appreciation from imprints via email for your kind donation. </li>
+                      <li> If you dont receive the certificate within 24 hours, please contact us</li>                     
                     </ol>
                   </div>
                     <div class="col-12 ">
@@ -240,9 +243,7 @@
                           </script>
                         </div>                          
                     </div>
-                    <div class="col-12 text-center">
-                      <button type="button" class="fp-controlArrow fp-prev btn" style="background-color: #10cff1; ">Back</button>
-                    </div>
+                    
                 </div> 
              </div>
             </div>
@@ -254,7 +255,7 @@
         <div class="section" style=" height:100vh;">
             <div class="d-block d-md-none">
                 <div class="col-12" id="swiper">
-                  <br><br><br><br><h3 class="abouttitle pb-2">IMPRINTS GALLERY</h3><br><br><br>
+                  <br><br><br><br><h3 class="abouttitle pb-2">Gallery</h3><br><br><br>
                     <div class="col-sm-12 col-xs-12">
                         <center>
                         <div class="box">
@@ -282,7 +283,7 @@
 
             <div class="d-none d-md-block container align-self-center" style="height: 100vh;overflow-x: hidden;overflow-y: hidden;">
               <div id="multi-item-example" class="carousel slide carousel-multi-item carousel-multi-item-2" data-ride="carousel" >
-                <br><br><h2 class="pb-2 abouttitle">IMPRINTS GALLERY</h2>
+                <br><br><h2 class="pb-2 abouttitle">Gallery</h2>
                 <div class="carousel-inner" role="listbox">
                   <div class="carousel-item active">
                     <div class="col-md-3 mb-3">
@@ -398,7 +399,7 @@
           <div class="section">
             <div style="height: 100vh; vertical-align: middle;background-color: #240112;">
               <div class="container d-flex conttop">
-                <div class="row align-self-center">
+                <div class="row align-self-center" style="padding-top: 80px;">
                   <div class="col-md-6 col-12 d-flex justify-content-left msect">
                     <div class="row">
                       <div class="col-12 d-none d-md-block">
