--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
      <title>IMPRINTS OFFICIAL</title>
 
      <!-- Bootstrap CSS -->
+     <link rel="icon" type="image/ico" href="/images/Fingerprint.ico">
      <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
      <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
      <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
