--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                       <li> After reading these instructions please click on the 'Pay Now' button below.</li>
                       <li> In the new window please fill in the details regarding your email, phone number and enter the amount being donated. After that click the pay button.</li>
                       <li> You will be awarded with a certificate of appreciation from imprints via email for your kind donation. </li>
-                      <li> If you dont receive the certificate within 24 hours, please contact us</li>                     
+                      <li> If you dont receive the certificate within 24 hours, PLEASE CONTACT US</li>                     
                     </ol>
                   </div>
                     <div class="col-12 ">
