--- a/index.html
+++ b/index.html
@@ -114,13 +114,13 @@
                 <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {}"></iframe>
                 <p class="font-small font-bold dark-text text-right d-flex justify-content-center mb-3 pt-2" style="color: white;"> or reach us through:</p>
                 <div class="row my-3 d-flex justify-content-center">
-                  <a href="https://www.facebook.com/Ncore20/" class="col" target="_blank">
+                  <a href="https://www.facebook.com/TransfusingSmiles" class="col" target="_blank">
                     <button type="button" class="btn btn-white btn-rounded btn-block"><i class="fab fa-facebook-f text-center"></i></button>
                   </a>
                   <a href="https://www.instagram.com/imprints._/" class="col" target="_blank">
                     <button type="button" class="btn btn-white btn-rounded btn-block"><i class="fab fa-instagram"></i></button>
                   </a>
-                  <a href="mailto:ncoreneetexam@gmail.com" class="col" target="_blank">
+                  <a href="mailto:medicalcollegeunion@gmail.com" class="col" target="_blank">
                     <button type="button" class="btn btn-white btn-rounded btn-block"><i class="fab fa-google"></i></button>
                   </a>
                 </div>
@@ -460,7 +460,7 @@
                     <div class="row conttitle"><h4 style="color: #f11045;">&emsp;Get Social</h4></div>
                     <div class="row">
                       <div class="con-social-btns col-12 cbut2">
-                          <a href="https://www.facebook.com/Ncore20/" target="_blank">
+                          <a href="https://www.facebook.com/TransfusingSmiles" target="_blank">
                             <button class="col ml-3 mr-3">
                               <i class="bx fab fa-facebook-f fa-2x"></i>
                               <div class="bg"></div>
@@ -472,7 +472,7 @@
                               <div class="bg"></div>
                             </button>   
                           </a>
-                          <a href="mailto:Ncoreneetexam@gmail.com" target="_blank">
+                          <a href="mailto:medicalcollegeunion@gmail.com" target="_blank">
                             <button class="col ml-3 mr-3">
                               <i class="bx fa fa-envelope fa-2x"></i>
                               <div class="bg"></div>
