--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
      
      <link rel="icon" type="image/ico" href="/images/Fingerprint.ico">
-     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@200&display=swap" rel="stylesheet">
+     <link href="https://fonts.googleapis.com/css2?family=Alata&family=Lobster&family=Roboto:wght@200&display=swap" rel="stylesheet">
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.9/fullpage.min.css" integrity="sha512-8M8By+q+SldLyFJbybaHoAPD6g07xyOcscIOQEypDzBS+sTde5d6mlK2ANIZPnSyxZUqJfCNuaIvjBUi8/RS0w==" crossorigin="anonymous" />
      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">     
 
@@ -250,7 +250,7 @@
                     <div class="col-sm-12 col-xs-12">
                         <center>
                         <div class="box">
-                          <span style="--i:1;"><img src="gallery/img1.png"></span>
+                          <span style="--i:1;"><img src="gallery/img1.jpeg"></span>
                           <span style="--i:2;"><img src="gallery/img2.jpg"></span>
                           <span style="--i:3;"><img src="gallery/img3.jpeg"></span>
                           <span style="--i:4;"><img src="gallery/img4.jpg"></span>
@@ -262,8 +262,8 @@
                           <span style="--i:10;"><img src="gallery/img10.jpg"></span>
                           <span style="--i:11;"><img src="gallery/img11.jpg"></span>
                           <span style="--i:12;"><img src="gallery/img12.jpg"></span>
-                          <span style="--i:13;"><img src="gallery/img13.png"></span>
-                          <span style="--i:14;"><img src="gallery/img14.png"></span>
+                          <span style="--i:13;"><img src="gallery/img13.jpeg"></span>
+                          <span style="--i:14;"><img src="gallery/img14.jpeg"></span>
                           <span style="--i:15;"><img src="gallery/img15.jpg"></span>
                           <span style="--i:15;"><img src="gallery/img16.jpeg"></span>
                         </div>            
@@ -279,7 +279,7 @@
                   <div class="carousel-item active">
                     <div class="col-md-3 mb-3">
                       <div class="card zoom">
-                        <img class="img-fluid hoverable" src="./gallery/img1.png"
+                        <img class="img-fluid hoverable" src="./gallery/img1.jpeg"
                           alt="Card image cap">
                       </div>
                     </div>
@@ -353,13 +353,13 @@
                     </div>
                     <div class="col-md-3 mb-3">
                       <div class="card zoom">
-                        <img class="img-fluid hoverable" src="./gallery/img13.png"
+                        <img class="img-fluid hoverable" src="./gallery/img13.jpeg"
                           alt="Card image cap">
                       </div>
                     </div>
                     <div class="col-md-3 mb-3">
                       <div class="card zoom">
-                        <img class="img-fluid hoverable" src="./gallery/img14.png"
+                        <img class="img-fluid hoverable" src="./gallery/img14.jpeg"
                           alt="Card image cap">
                       </div>
                     </div>
