--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         </div>
 
         
-        <div class="section" id="smile" >
+        <div class="section" id="smile" style="background-image: url('./images/smilesbg.jpeg')">
           <div class="lighttint">
             <div class="container  h-100 d-flex smilecont">
               <div class="slide">
