--- a/index.html
+++ b/index.html
@@ -157,10 +157,10 @@
                         <h1 class="abouttitle">Who We Are</h1>
                       </div>
                   <div class="col-12 col-lg-6">
-                    <p style="font-family: 'Roboto', sans-serif;">
+                    <p align="justify" style="font-family: 'Roboto', sans-serif;">
                       Imprints,with a touch of heart,is a humanitarian initiative of the student body of Calicut Medical College along with the Department of Pediatrics of Calicut Medical College. It was launched in 2012 to cater medical and financial needs of the economically poor kids suffering from Type 1 Diabetes, Wilson's Disease and Thalassemia and other diseases keeping their joyful childhood at bay. Since it's establishment Imprints has been a blessing for a large number of parents hammering away to find means to support their child fight their battle.
                     </p>
-                    <p class="d-none d-md-block" style="font-family: 'Roboto', sans-serif;">At present Imprints provide for 58 children with Type 1 Diabetes,16 children with Thalassemia and 7 children with Neuro Wilson's. We would like to expand the ambit of our caring ways to embrace a larger population and also requires your support to do so. This pandemic time has been difficult for everyone and we can't let it stop us from doing things that make us more human.
+                    <p align="justify" class="d-none d-md-block" style="font-family: 'Roboto', sans-serif;">At present Imprints provide for 58 children with Type 1 Diabetes,16 children with Thalassemia and 7 children with Neuro Wilson's. We would like to expand the ambit of our caring ways to embrace a larger population and also requires your support to do so. This pandemic time has been difficult for everyone and we can't let it stop us from doing things that make us more human.
                     </p>
                   </div>
                 </div>
@@ -178,20 +178,16 @@
                 <div class="col-12 col-md-6">
                   <div class="row">
                 <div class="col-12"> 
-                  <h1 class="abouttitle">Volunteer Program</h1>
+                  <h1 class="abouttitle">Volunteer Programme</h1>
                 </div>
                 <div class="col-12">
-                  <p>
-                    <b>
-                      IMPRINTS is a charitable organization that has been operating in our college for many years.
-                      Throughout these years students directly collected funds to run our activities.It is also known that Imprint does not have a steady source of income. But SPREADING THOUSANDS SMILES is an initiative that we have put forward to ensure a hassle free secure income.
-                    </b>
+                  <p align="justify">
+                      <b>IMPRINTS</b> is a charitable organization that has been operating in our college for many years.
+                      Throughout these years students directly collected funds to run our activities.It is also known that Imprints does not have a steady source of income. But <b>"Spreading Thousand Smiles"</b> is an initiative that we have put forward to ensure a hassle free secure income.
                   </p>
-                  <p>
-                    <b>
-                      In this initiative volunteers pay at least Rs.1000 / - a year that is saving about Rs.3 a day for Imprints
-                      We are inviting volunteers to help us by donating Rs.1000 yearly to keep our little mates smile even better
-                    </b>
+                  <p align="justify">
+                      In this initiative volunteers pay at least <b>Rs.1000 / - a year</b> that is saving about <b>Rs.3 a day</b> for Imprints
+                      We are inviting volunteers to help us by donating Rs.1000 yearly to keep our little mates smile even better.
                   </p>
                 </div>
                 </div>
@@ -211,16 +207,16 @@
               
               <div class="slide instructions">
                 <div class="row">
-                  <div class="col-12 text-right">
+                  <div class="col-12 text-right d-none d-md-block">
                     <button type="button" class="fp-controlArrow fp-prev btn" style="background-color: #10cff1; ">Back</button>
                   </div>
                   <div class="col-12">
-                    <h2>PLEASE READ THE FOLLOWING INFORMATIONS CAREFULLY!</h2>
+                    <h2>PLEASE READ THE FOLLOWING INSTRUCTIONS CAREFULLY!</h2>
                     <ol>
                       <li> After reading these instructions please click on the 'Pay Now' button below.</li>
                       <li> In the new window please fill in the details regarding your email, phone number and enter the amount being donated. After that click the pay button.</li>
                       <li> You will be awarded with a certificate of appreciation from imprints via email for your kind donation. </li>
-                      <li> If you dont receive the certificate within 24 hours, PLEASE CONTACT US</li>                     
+                      <li> If you dont receive the certificate within 24 hours, <b>PLEASE CONTACT US</b></li>                     
                     </ol>
                   </div>
                     <div class="col-12 ">
@@ -234,7 +230,9 @@
                           </script>
                         </div>                          
                     </div>
-                    
+                    <div class="col-12 text-center d-block d-md-none">
+                      <button type="button" class="fp-controlArrow fp-prev btn" style="background-color: #10cff1; ">Back</button>
+                    </div>
                 </div> 
              </div>
             </div>
