--- a/index.html
+++ b/index.html
@@ -57,6 +57,24 @@
         </div>
       </nav>
 
+      <div id="announcementModal" class="modal" role="dialog">
+        <div class="modal-dialog modal-lg" role="content">
+            <div class="modal-content">
+                <div class="modal-header" style="background:initial;">
+                    <h4 class="modal-title"></h4>
+                    <button type="button" class="close" data-dismiss="modal" style="width:initial; height:initial">&times;</button>
+                </div>
+                <div class="modal-body">
+                   <div class="row">
+                     <div class="col">
+                      <img class="img-fluid" src="./images/announcement.jpeg"  >
+                     </div>
+                   </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
       <!-----------Modal start---------------->
 
@@ -530,6 +548,11 @@
     <script type="text/javascript" src="js/fp.js"></script>
     <!-- endbuild -->
 
+    <script type="text/javascript">
+      $(document).ready(function(){
+          $("#announcementModal").modal('show');
+      });
+  </script>
 
 
 </body>
